--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   shared_preferences: ^2.1.0
   firebase_auth: ^4.4.0
   firebase_core: ^2.9.0
+  cloud_firestore: ^4.5.0
 
 dev_dependencies:
   flutter_test:
