--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_auth: ^4.4.0
   firebase_core: ^2.9.0
   cloud_firestore: ^4.5.0
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
