--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_core: ^2.9.0
   cloud_firestore: ^4.5.0
   cached_network_image: ^3.2.3
+  flutter_switch: ^0.3.2
 
 dev_dependencies:
   flutter_test:
